--- a/themes/default/layouts/showReportaje.htm
+++ b/themes/default/layouts/showReportaje.htm
@@ -119,22 +119,24 @@ code = "redes-sociales"
 
     {% partial 'device-rotate' %}
     {% partial 'site/header' %}
+    <div id="showreportaje">
     {% component 'staticPage' %}
+    </div>
     
     <div class="reportInfo">
         
         <div class="feature">
-            <img src="/cadizturismo/storage/app/media/uploaded-files/templates/info-reportaje.svg" class="fr-fil fr-dib">
-            <p class="feature-txt">{{rwebinfo}}</p>
+            <img src="{{preurl}}/storage/app/media/uploaded-files/templates/info-reportaje.svg" class="fr-fil fr-dib">
+            <p class="feature-txt"><a href="{{rwebinfo}}">{{rwebinfo}}</a></p>
         </div>
         <div class="feature">
-            <img src="/cadizturismo/storage/app/media/uploaded-files/templates/calendar-event.svg" class="fr-fil fr-dib">
+            <img src="{{preurl}}/storage/app/media/uploaded-files/templates/calendar-event.svg" class="fr-fil fr-dib">
             {% set dated = rdate|split(' ')[0] %}
             {% set datef = dated|split('-') %}
             <p class="feature-txt">{{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</p>
         </div>
         <div class="feature">
-            <img src="/cadizturismo/storage/app/media/uploaded-files/templates/share-reportaje.svg" class="fr-fil fr-dib">
+            <img src="{{preurl}}/storage/app/media/uploaded-files/templates/share-reportaje.svg" class="fr-fil fr-dib">
             <p class="feature-txt"><a href='https://www.facebook.com/sharer/sharer.php?u={{preurl~"/"~lang~urlPage}}' target="_blank">Facebook</a> | <a data-action="share/whatsapp/share" href='whatsapp://send?text={{preurl~"/"~lang~urlPage}}'>WhatsApp</a> | <a href='https://twitter.com/home?status={{preurl~"/"~lang~urlPage}}' target="_blank">Twitter</a></p>
         </div>
         
