--- a/themes/default/layouts/showReportaje.htm
+++ b/themes/default/layouts/showReportaje.htm
@@ -127,7 +127,7 @@ code = "redes-sociales"
         
         <div class="feature">
             <img src="{{preurl}}/storage/app/media/uploaded-files/templates/info-reportaje.svg" class="fr-fil fr-dib">
-            <p class="feature-txt"><a href="{{rwebinfo}}">{{rwebinfo}}</a></p>
+            <p class="feature-txt"><a href="{{rwebinfo}}" target="_blank">{{rwebinfo}}</a></p>
         </div>
         <div class="feature">
             <img src="{{preurl}}/storage/app/media/uploaded-files/templates/calendar-event.svg" class="fr-fil fr-dib">
