--- a/themes/default/partials/news.htm
+++ b/themes/default/partials/news.htm
@@ -30,6 +30,7 @@
       	</div>
       </div>
       <div class="shr">
+      	<img src="{{preurl}}/storage/app/media/uploaded-files/templates/shr.svg" alt=""> 
       </div>	     
       <div class="publicacion">
       		{% set dated = new.viewBag.date|split(' ')[0] %}
