--- a/themes/default/partials/allreports.htm
+++ b/themes/default/partials/allreports.htm
@@ -26,13 +26,14 @@
       	</div>
       </div>
       <div class="shr">
+        <img src="{{preurl}}/storage/app/media/uploaded-files/templates/shr.svg" alt=""> 
       </div>	     
       <div class="publicacion">
       		{% set dated = report.viewBag.dateReportaje|split(' ')[0] %}
 			{% set datef = dated|split('-') %}
 			<span class='reportDate reportDatem'>{{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
           <h6 class="publi-title h6m">{{report.viewBag.title}}</h6>
-          <div>      
+          <div>  
         	<p class="publi-desc">{{report.viewBag.descrptn}}</p>
       	  </div>
       </div>
