--- a/themes/default/layouts/prensa.htm
+++ b/themes/default/layouts/prensa.htm
@@ -121,7 +121,7 @@ code = "redes-sociales"
     <div class="header-general header-salaprensa">
         <div class="header-container">
             <div class="header-txt">
-                <h1 class="txt-rutas"><span class="first-word-rutas">{{ "Sala Prensa"|_ }}</span><span class="con-encanto" style="display: block;"> &nbsp</span></h1>
+                <h1 class="txt-rutas"><span class="first-word-rutas">{{ "Sala Prensa"|_ }}</span></h1>
                 <img class="brush brushTop" src="{{preurl}}/storage/app/media/uploaded-files/templates/brush-header.svg" alt="">
             </div>
         </div>
