--- a/themes/default/layouts/prensa.htm
+++ b/themes/default/layouts/prensa.htm
@@ -282,6 +282,11 @@ code = "redes-sociales"
                 <span class="stitle">Descubre qué se dice de Cádiz alrededor del mundo.</span>
             </div>
         </div>
+        <div class ='qdnm'>
+                <span class="title">¿QUÉ SE DICE DE NOSOTROS?</span>
+                <img class="mapsline" src="{{preurl}}/storage/app/media/uploaded-files/templates/mapsline.svg" alt="">
+                <span class="stitle">Descubre qué se dice de Cádiz alrededor del mundo.</span>
+        </div>
     </div> 
     </div>
     {% component 'staticPage' %}
