--- a/themes/default/partials/allreports.htm
+++ b/themes/default/partials/allreports.htm
@@ -28,12 +28,16 @@
       </div>	     
       <div class="publicacion">
       		{% set dated = report.viewBag.dateReportaje|split(' ')[0] %}
-			{% set datef = dated|split('-') %}
-			<span class='reportDate reportDatem'>{{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
+			   {% set datef = dated|split('-') %}
+			   <span class='reportDate reportDatem'>{{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
           <h6 class="publi-title h6m">{{report.viewBag.title}}</h6>
           <div>  
         	<p class="publi-desc">{{report.viewBag.descrptn}}</p>
+          <p class="publi-descm">{{report.viewBag.descrptn|length > 100 ? report.viewBag.descrptn|slice(0, 101) ~ '...' : report.viewBag.descrptn}}</p>
       	  </div>
+          <div class="links-containerm">  
+            <a class="download-link" href='{{preurl~"/"~lang~report.viewBag.url}}''>{{'Ver reportaje'|_}}</a>
+          </div>
       </div>
     </div>
 {% endfor %}
